# astro21-sim

./: .gitignore  README.md  astro21_gui.py  calibrate_to_paper.py  compare_to_paper.py  fix_test.py  parametric_study.py  pyproject.toml  run_suite.py  test_gui.py  test_init.py
astro21_sim/: __init__.py  atmosphere.py  calibration.py  constants.py  controller.py  orbits.py  plots.py  regression.py  simulations.py
