[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro21-sim"
version = "0.1.0"
description = "Reproduction of the adaptive differential-drag rendezvous simulations from Acta Astronautica 181 (2021) 733-740."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
]

